implementing javascript functionalities

--- a/Todo App/index.html
+++ b/Todo App/index.html
@@ -74,7 +74,7 @@
             </form>
             <div class="todo-app__details">
               <ul class="todo-app__list">
-                <li class="todo-app__item">
+                <!-- <li class="todo-app__item">
                   <label for="radio-item--1" class="todo-app__label-btn">
                     <input
                       type="radio"
@@ -93,67 +93,7 @@
                     <button class="btn btn--edit">edit</button>
                     <button class="btn btn--delete">delete</button>
                   </div>
-                </li>
-                <li class="todo-app__item">
-                  <label for="radio-item--2" class="todo-app__label-btn">
-                    <input
-                      type="radio"
-                      name="radio-item"
-                      id="radio-item--2"
-                      class="todo-app__radio"
-                    />
-                    <span class="todo-app__radio-btn">
-                      <svg class="todo-app__radio-icon icon">
-                        <use xlink:href="img/icons.svg#icon-check"></use>
-                      </svg>
-                    </span>
-                  </label>
-                  <input type="text" class="todo-app__input-value" />
-                  <div class="btn__container">
-                    <button class="btn btn--edit">edit</button>
-                    <button class="btn btn--delete">delete</button>
-                  </div>
-                </li>
-                <li class="todo-app__item">
-                  <label for="radio-item--3" class="todo-app__label-btn">
-                    <input
-                      type="radio"
-                      name="radio-item"
-                      id="radio-item--3"
-                      class="todo-app__radio"
-                    />
-                    <span class="todo-app__radio-btn">
-                      <svg class="todo-app__radio-icon icon">
-                        <use xlink:href="img/icons.svg#icon-check"></use>
-                      </svg>
-                    </span>
-                  </label>
-                  <input type="text" class="todo-app__input-value" />
-                  <div class="btn__container">
-                    <button class="btn btn--edit">edit</button>
-                    <button class="btn btn--delete">delete</button>
-                  </div>
-                </li>
-                <li class="todo-app__item">
-                  <label for="radio-item--4" class="todo-app__label-btn">
-                    <input
-                      type="radio"
-                      name="radio-item"
-                      id="radio-item--4"
-                      class="todo-app__radio"
-                    />
-                    <span class="todo-app__radio-btn">
-                      <svg class="todo-app__radio-icon icon">
-                        <use xlink:href="img/icons.svg#icon-check"></use>
-                      </svg>
-                    </span>
-                  </label>
-                  <input type="text" class="todo-app__input-value" />
-                  <div class="btn__manipulate">
-                    <button class="btn btn--edit">edit</button>
-                    <button class="btn btn--delete">delete</button>
-                  </div>
-                </li>
+                </li> -->
               </ul>
               <div class="todo-app__actions">
                 <p class="todo-app__text">
@@ -170,11 +110,12 @@
             </div>
           </div>
         </main>
-        <footer>
+        <footer class="footer">
           Design by
           <a
             href="https://github.com/busarishakrullahi/Top-100-Projects"
             target="_blank"
+            class="footer__link"
             >Busari Shakrullahi</a
           >
         </footer>
