--- a/Form Validation/index.html
+++ b/Form Validation/index.html
@@ -123,7 +123,7 @@
                   name="confirm passowrd"
                   placeholder="Confirm Password"
                 />
-                <button class="btn--show">
+                <button class="btn btn--show">
                   <svg class="fonts icon--show">
                     <use xlink:href="img/icons.svg#icon-eye-hidden"></use>
                   </svg>
@@ -137,6 +137,15 @@
           </form>
         </section>
       </main>
+      <footer class="footer">
+        Design by
+        <a
+          href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Form%20Validation"
+          target="_blank"
+          class="footer__link"
+          >busari shakrullahi</a
+        >
+      </footer>
     </div>
   </body>
 </html>
