--- a/Todo App/index.html
+++ b/Todo App/index.html
@@ -106,7 +106,7 @@
             <div class="todo-app__actions">
               <p class="todo-app__text">
                 <span class="todo-app__item-left">0</span>
-                items left uncheck
+                Items left uncheck
               </p>
               <div class="btn__listners">
                 <button class="btn btn--all">all</button>
